# ArbitrageAssistant

./: .env.example  .gitignore  .gitignore.backup  .npmrc  .tmux.conf  CLAUDE.md  GITHUB_SECRETS_SETUP.md  HACONIWA_ISSUE_ANALYSIS.md  MVPシステム設計.md  MVPディレクトリ構造.md  Pane-Internal-Workflow.md  README-HACONIWA.md  README.md  USER_NEXT_STEPS.md  agent-send-improved.sh  agent-send.sh  arbitrage-assistant-mvp.yaml  arbitrage-assistant.yaml  build-verification-report.md  memo.md  package-lock.json  package.json  start-improved-system.sh  state.pkl  template.tsx  text-selection-test.html  tmux-pane-communication-analysis.md  turbo.json  turborepo-optimization-director-instructions.md  ui-director-instructions.md  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: claude-code.yml  (+6 more)
.haconiwa/: README.md  desk_mappings.json  room_window_mapping.json
backup/: README.md  task-01-trade-entry-system.md  task-02-position-close-system.md  task-03-realtime-position-monitoring.md  task-04-trail-management-system.md  task-05-hedge-position-management.md  task-06-risk-management-losscut-monitoring.md  task-07-system-update-management.md  task-08-ea-websocket-integration-enhancement.md
business/: システムトレード参加ガイド.md  海外FXボーナスアービトラージ業務フロー.md
docs/: AUTO_UPDATE_ARCHITECTURE.md  AWS_SECRETS_SETUP.md  GITHUB_ACTIONS_DEBUG_GUIDE.md  README.md  TAURI_SIGNING_SETUP.md  backend-department-architecture.md  core-department-architecture.md  frontend-department-architecture.md  haconiwa-agent-responsibility-matrix.md  haconiwa-optimization-summary.md  integration-department-architecture.md  quality-department-architecture.md
ea/: HedgeSystemConnector.mq5  MT5_DEMO_SETUP.md  MT5_INTEGRATION_TEST_PLAN.md  PRODUCTION_DEPLOYMENT.md  README.md  ReliableWebSocketClient.mq5  TEST_REPORT.md
ea/websocket-dll/: BUILD.md  CMakeLists.txt  HedgeSystemWebSocket.cpp  HedgeSystemWebSocket.h  OPTIMIZATION_REPORT.md  README.md  build.bat  build.sh  build_test.sh  run_test.sh  test_mt5.mq5  test_websocket.cpp
instructions/: director.md  president.md  worker.md
mds/: HACONIWA_GUIDE.md  HACONIWA_IMPLEMENTATION_NOTES.md  PARALLEL_DEVELOPMENT.md  memo.md
organization/: company_info.md
scripts/: README.md  add-ui-component.sh  agent-role-checker.sh  auto-init-claude.sh  backend-table-guard.sh  ceo-analytics-auto.sh  ceo-completion-checker.sh  ceo-dynamic-strategy-v3.md  ceo-dynamic-strategy.md  ceo-improvements-summary.md  ceo-initial-prompts.sh  ceo-instructions-template.md  ceo-main-directive.md  ceo-operations-auto.sh  ceo-strategic-management.md  ceo-supreme-demo-v4.sh  ceo-supreme-perfect-execution-v4.sh  ceo-supreme-perfect-initial-prompt.sh  ceo-supreme-perfect-prompt-v4.md  ceo-supreme-perfect-usage-guide.md  ceo-usage-guide.md  claude-setup-all-windows.sh  clean-all.sh  director-auto-delegate-v2.sh  director-auto-delegate.sh  director-base-template.md  director-execution-check.sh  extract-claude-oauth-tokens.js  fix-haconiwa-env.sh  haconiwa-auth-fix.sh  haconiwa-autonomous.sh  haconiwa-clean-start.sh  haconiwa-clean-tmux-only.sh  haconiwa-debug.sh  haconiwa-env-fix.sh  haconiwa-monitor.sh  haconiwa-role-test.sh  haconiwa-setup-windows.sh  haconiwa-start.sh  haconiwa-status.sh  (+27 more)
standby/: README.md
tasks/: README.md  codebase-perfection-roadmap.md  css-build-optimization.md  development-roadmap.md  graphql-2-1.md  graphql-2-2.md  graphql-2-3.md  graphql-3.md  mvp-cleanup-progress.md  mvp-cleanup.md  mvp-final-cleanup-check.md  mvp-m3-quality-monitoring-cleanup.md  mvp-m4-optimization-cleanup.md  package-architecture-refinement.md  phase-1-completion.md  phase-2-automation.md  phase-3-advanced.md  quality-enhancement.md  task-5.md  ui-completion.md  user-ceo-responsibilities.md
(+720 files in other folders)
